# DevTools-CLI

./: .clinerules  README.md  pyproject.toml
.github/workflows/: ci.yml
devtools_cli/: __init__.py  __main__.py
devtools_cli/commands/: __init__.py  template.py
devtools_cli/core/: __init__.py  template_manager.py
templates/: registry.json
templates/ci/: github-actions-ci.yml  github-actions-release.yml
templates/docker/: compose-stack.yml  python-fastapi.dockerfile
templates/k8s/: deployment.yaml  service.yaml
templates/terraform/: aws-vpc.tf
tests/: __init__.py
tests/integration/: test_cli_commands.py
tests/unit/: test_template_manager.py
